sna: Block SIGIO when we are trying to flip

Temporarily stopping the pointer whilst we try to queue the flip should
help keep the output latency down.

Reported-by: Rafael Ristovski <rafael.ristovski@gmail.com>
References: https://bugs.freedesktop.org/show_bug.cgi?id=94980
Signed-off-by: Chris Wilson <chris@chris-wilson.co.uk>